fix: darken scrollbar

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -38,5 +38,5 @@ h1, h2, h3, h4, h5, h6
     max-width 6px
     max-height 12px
   ::-webkit-scrollbar-thumb
-    background-color #eaeff6
+    background-color rgba(255, 255, 255, 0.4)
     border-radius 6px
